# RecruitIQ

./: .gitignore  QUICKSTART.md  README.md  analyze.py  cli.py  dashboards.py  install.py  interactive_cli.py  main.py  pyproject.toml  reports.py  requirements.txt  search.py  setup.py  utils.py
alembic/: env.py
db/: __init__.py  models.py  session.py
docs/: ARCHITECTURE.md  QUICKSTART.md  README.md
recruitiq/: __init__.py
recruitiq/cli/: __init__.py  interactive.py  main.py
recruitiq/core/: __init__.py  analyzer.py  cv_analyzer.py  dashboard.py  reporter.py  searcher.py
recruitiq/db/: base.py  models.py  session.py
recruitiq/scrapers/: company_sites.py  glassdoor.py  indeed.py  linkedin.py  remoteok.py
recruitiq/utils/: __init__.py  ascii_art.py  helpers.py  validators.py
reports/: executive_summary_20250701_133914.html  executive_summary_20250701_134202.html  salary_analysis_20250701_134231.html
scrapers/: __init__.py  company_sites.py  glassdoor.py  indeed.py  linkedin.py  remoteok.py
scripts/: install.py  setup.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  run_tests.py  test_analyzer.py  test_cli.py  test_cv_analyzer.py  test_models.py  test_scrapers.py  test_utils.py
