[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recruitiq"
version = "2.0.0"
description = "Job Market Intelligence Platform - Beautiful CLI with analytics, reporting, and comprehensive job market insights"
readme = "docs/README.md"
license = {text = "MIT"}
authors = [
    {name = "RecruitIQ Team", email = "contact@recruitiq.dev"}
]
keywords = ["jobs", "scraping", "analysis", "cli", "career", "recruitment", "interactive", "terminal", "tui", "analytics", "intelligence"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Terminals",
    "Topic :: System :: Shells",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "jinja2>=3.1.0",
]

[project.urls]
"Bug Reports" = "https://github.com/yourusername/recruitiq/issues"
"Source" = "https://github.com/yourusername/recruitiq"
"Documentation" = "https://github.com/yourusername/recruitiq#readme"

[project.scripts]
recruitiq = "main:main"

[tool.setuptools.packages.find]
include = ["recruitiq*"]

[tool.setuptools.package-data]
recruitiq = ["alembic.ini"] 